<resources>
    <string name="app_name">SpiceRack</string>
    <string name="shopping_list">Shopping List</string>
    <string name="barcode_number">Barcode Number:</string>
    <string name="spice_name">Spice Name:</string>
    <string name="current_stock">Current Stock:</string>
    <string name="update_spice">update Spice</string>
    <string name="add_spice">Add Spice</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="barcode_here">barcode here</string>
    <string name="view_inventory">View Inventory</string>
    <string name="spice_name_here">spice name here</string>
    <string name="stock_here">stock here</string>
    <string name="update_stock">Update Stock</string>
    <string name="delete_spice">delete Spice</string>
    <string name="shopping">Shopping</string>
    <string name="home">Home</string>
    <string name="inventory">Inventory List</string>
    <string name="barcode">Barcode</string>
    <string name="stock">Stock</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">LOG IN</string>
    <string name="emblem">Emblem</string>
    <string name="spice_rack">Spice Rack</string>
    <string name="scan">Scan</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="profilepicture">profilePicture</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="spice_name_inv">Spice Name</string>
    <string name="you_have_2_chilli_spices_in_your_cupboard">You have 2 Chilli spices in your cupboard</string>
    <string name="add_one">Add One</string>
    <string name="take_one">Take One</string>
    <string name="add_item">Add Item</string>
    <string name="clear_list">Clear List</string>
    <string name="shopping_list_name">Name:</string>
    <string name="shopping_list_edit_name">Name here</string>
    <string name="shopping_list_amount">Amount:</string>
    <string name="shopping_list_edit_amount">Amount here</string>
    <string name="shopping_list_adaptor_name">Name:</string>
    <string name="shopping_list_adaptor_nameRV">Name</string>
    <string name="shopping_list_adaptor_amount">Amount:</string>
    <string name="shopping_list_adaptor_amountRV">Amount</string>
    <string name="RVcontainertype">ContainerType</string>
    <string name="RVbrand">Brand</string>
    <string name="brand">Brand</string>
    <string name="container_type_here">container type here</string>
    <string name="container_type">Container</string>
    <string name="barcodeAdaptor">Barcode:</string>
    <string name="stockAdaptor">Stock:</string>
    <string name="container_type_adaptor">Container Type:</string>
    <string name="brandAdaptor">Brand:</string>
    <string name="barcode_number_inventory">Barcode Number</string>
    <string name="spice_name_inventory">Spice Name</string>
    <string name="spiceid">spiceID</string>
    <string name="spice_id">Spice ID:</string>
    <string name="message">Message</string>
    <string name="signUp">Sign Up</string>
    <string name="label_user_name">Name: </string>
    <string name="user_name">Your name here</string>
    <string name="label_email_address">Email address:</string>
    <string name="email_address">Your email address here</string>
    <string name="label_password">Password:</string>
    <string name="password">Your password here</string>
    <string name="label_confirm_password">Confirm password:</string>
    <string name="confirm_password">Confirm your password here</string>
    <string name="button_sign_up">Sign up</string>
    <string name="logIn">Log in</string>
    <string name="deleteAccount">Delete account</string>
    <string name="spice_inventory_list">Spice Inventory List</string>
    <string name="textview">TextView</string>
    <string name="update">Update</string>
    <string name="loginHint">Login Hint</string>
    <string name="showHint">Show Hint</string>
    <string name="spice_inventory_editor">Spice Inventory Editor</string>
    <string name="spice_information">Spice Information</string>
    <string name="pic1">Pic1</string>
    <string name="pic2">pic2</string>
    <string name="ProfileSwipeInstructions">Swipe bottom to top to open the Profile.</string>
    <string name="ShoppingListSwipeInstructions">Swipe right to left to open the Shopping List.</string>
    <string name="InventoryListSwipeInstructions">Swipe left to right to open the Inventory List.</string>
    <string name="ScanSwipeInstructions">Swipe top to bottom to open a scan.</string>
    <string name="Instructions">Instructions of swipe navigation.</string>
    <string name="spice_image">Spice Image</string>
    <string name="HomeSwipeInstructions">Swipe bottom to top to open Home.</string>
    <string name="SwipeInstructionShoppingListToHome">Swipe left to right to open home.</string>
    <string name="SwipeInstructionsToInventoryEditor">Swipe left to right to open Inventory Editor.</string>
    <string name="SwipeRtoLHome">Swipe right to left to open Home.</string>
    <string name="SwipeRtoLInventory">Swipe right to Left to open Inventory</string>
    <string name="about_application">About Application</string>
    <string name="authors">SpiceRack was created by Astrid Strohmaier and Michael Carter.</string>
    <string name="barcode_scanner_credit">Barcode Scanning was implemented using the open source Zxing library found at github.com/zxing/zxing</string>
    <string name="image_credit">Images used in this application were sourced from Pixabay.com. Individual credit for images can be found in the Readme file on Github for this applicaiton.</string>
    <string name="about">About</string>
    <string name="aboutImage">AboutImage</string>
</resources>
