<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/RVBarcode"
            style="@style/EditTextDefaultAdaptor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:text="@string/barcode" />

        <TextView
            android:id="@+id/RVSpiceName"
            style="@style/EditTextDefaultAdaptor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:text="@string/spice_name" />

        <TextView
            android:id="@+id/RVBrand"
            style="@style/EditTextDefaultAdaptor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:text="@string/RVbrand" />

        <TextView
            android:id="@+id/RVContainerType"
            style="@style/EditTextDefaultAdaptor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:text="@string/RVcontainertype" />

        <TextView
            android:id="@+id/RVStock"
            style="@style/EditTextDefaultAdaptor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:text="@string/stock" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

