<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green_white_background"
    tools:context="com.example.spicesinventory.activites.ScanActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="303dp">

        <Button
            android:id="@+id/deleteSpices"
            style="@style/ButtonStyleBackOnYellow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="deleteSpice"
            android:text="@string/delete_spice"
            android:textStyle="normal|bold"
            tools:ignore="RelativeOverlap" />

        <Button
            android:id="@+id/addSpice"
            style="@style/ButtonStyleBackOnYellow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="addSpice"
            android:text="@string/add_spice"
            android:textSize="14sp"
            android:textStyle="normal|bold"
            android:layout_marginStart="8dp"/>

        <Button
            android:id="@+id/Scan"
            style="@style/ButtonStyleBackOnYellow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="scanner"
            android:text="@string/scan_barcode"
            android:textSize="14sp"
            android:textStyle="normal|bold"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="121dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="174dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/Barcode_Number"
                style="@style/EditTextDefault"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/barcode_number" />

            <EditText
                android:id="@+id/editBarcode"
                style="@style/EditTextDefault"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:gravity="center_vertical|center"
                android:hint="@string/barcode_here"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="343dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/Spice_Name"
                style="@style/EditTextDefault"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/spice_name" />

            <EditText
                android:id="@+id/editSpiceName"
                style="@style/EditTextDefault"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:gravity="center_vertical|center"
                android:hint="@string/spice_name_here"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="333dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/StockNumber"
                style="@style/EditTextDefault"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/current_stock" />

            <EditText
                android:id="@+id/editStock"
                style="@style/EditTextDefault"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:gravity="center_vertical|center"
                android:hint="@string/stock_here"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textSize="14sp"
                android:textStyle="bold|italic" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="345dp"
        android:layout_height="44dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/ShoppingList"
            style="@style/ButtonStyleBackOnYellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:onClick="ShoppingPage"
            android:text="@string/shopping_list"
            android:textSize="14sp"
            android:textStyle="normal|bold" />

        <Button
            android:id="@+id/viewSpices"
            style="@style/ButtonStyleBackOnYellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:onClick="InventoryPage"
            android:text="@string/view_inventory"
            android:textSize="14sp"
            android:textStyle="normal|bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="200dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/editText2"
            style="@style/EditTextDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/update_stock"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/updateStock"
            style="@style/EditTextDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_vertical|center"
            android:hint="@string/update_stock"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/updater"
            style="@style/ButtonStyleBackOnYellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:onClick="updateSpice"
            android:text="@string/update_spice"
            android:textSize="14sp"
            android:textStyle="normal|bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>