<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green_white_background"
    tools:context="com.example.spicesinventory.activites.InventoryActivity"
    android:windowSoftInputMode="adjustResize"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        android:weightSum="100"
        app:layout_constraintBottom_toTopOf="@+id/rvSpiceList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/tvBarcode"
            style="@style/EditTextDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:gravity="center"
            android:textSize="22sp"
            android:text="@string/barcode" />


        <TextView
            android:id="@+id/editSpNamInventory"
            style="@style/EditTextDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:gravity="center"
            android:textSize="22sp"
            android:text="@string/spice_name_inv" />

        <TextView
            android:id="@+id/editStock"
            style="@style/EditTextDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:textSize="22sp"
            android:gravity="center"
            android:text="@string/stock" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="210dp"
        android:layout_marginEnd="36dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/deleteSpices"
            style="@style/ButtonStyleBackOnYellow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/delete_spice"
            android:textStyle="normal|bold"
            tools:ignore="RelativeOverlap" />

        <Button
            android:id="@+id/addSpice"
            style="@style/ButtonStyleBackOnYellow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/add_spice"
            android:textStyle="normal|bold" />

    </LinearLayout>

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/Barcode_Number"
                style="@style/EditTextDefault"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center"
                android:text="@string/barcode_number" />

            <EditText
                android:id="@+id/editBarcode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:textColor="@color/textColour"
                android:gravity="center_vertical|center"
                android:hint="@string/barcode_here"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />
        </TableRow>

        <TableRow
            android:layout_width="343dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/Spice_Name"
                style="@style/EditTextDefault"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center"
                android:text="@string/spice_name" />

            <EditText
                android:id="@+id/editSpiceName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:gravity="center_vertical|center"
                android:hint="@string/spice_name_here"
                android:importantForAutofill="no"
                android:textColor="@color/textColour"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/StockNumber"
                style="@style/EditTextDefault"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center"
                android:text="@string/current_stock" />

            <EditText
                android:id="@+id/tvStock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center_vertical|center"
                android:textColor="@color/textColour"
                android:hint="@string/stock_here"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />
        </TableRow>

    </TableLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSpiceList"
        android:layout_width="347dp"
        android:layout_height="360dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.918" />

</androidx.constraintlayout.widget.ConstraintLayout>