<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green_white_background">


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/SpiceImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tableLayout2">

        <Button
            android:id="@+id/deleteSpices"
            style="@style/ButtonStyleBlackOnYellow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/delete_spice"
            android:textStyle="normal|bold"
            tools:ignore="RelativeOverlap" />

        <Button
            android:id="@+id/btnUpdateSpice"
            style="@style/ButtonStyleBlackOnYellow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/update" />

        <Button
            android:id="@+id/btnaddSpice"
            style="@style/ButtonStyleBlackOnYellow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/add_spice"
            android:textStyle="normal|bold" />

    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvInventoryEditorTitle">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/Barcode_Number"
                style="@style/EditTextDefault"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center"
                android:text="@string/barcode_number" />

            <EditText
                android:id="@+id/editBarcode"
                style="@style/EditTextDefault"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:gravity="center_vertical|center"
                android:hint="@string/barcode_here"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:textColor="@color/textColour" />
        </TableRow>

        <TableRow
            android:layout_width="343dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/Spice_Name"
                style="@style/EditTextDefault"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center"
                android:text="@string/spice_name" />

            <EditText
                android:id="@+id/editSpiceName"
                style="@style/EditTextDefault"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:gravity="center_vertical|center"
                android:hint="@string/spice_name_here"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/textColour" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/StockNumber"
                style="@style/EditTextDefault"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center"
                android:text="@string/current_stock" />

            <EditText
                android:id="@+id/editStock"
                style="@style/EditTextDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center_vertical|center"
                android:hint="@string/stock_here"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:textColor="@color/textColour" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvContainerType"
                style="@style/EditTextDefault"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center"
                android:text="@string/container_type" />

            <Spinner
                android:id="@+id/spContainerType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvBrand"
                style="@style/EditTextDefault"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center"
                android:text="@string/brand" />

            <Spinner
                android:id="@+id/spBrand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/tvInventoryEditorTitle"
        style="@style/EditTextDefault"
        android:layout_width="302dp"
        android:layout_height="43dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="32dp"
        android:text="@string/spice_inventory_editor"
        android:textFontWeight="700"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fBtnScanBarcode"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_gravity="bottom|end"
        android:backgroundTint="@color/yellowText"
        android:src="@drawable/barcode_clipart"
        app:fabCustomSize="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.815"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.187"
        app:maxImageSize="50dp" />

    <ImageView
        android:id="@+id/SpiceImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/spicenmortar_clipart" />

</androidx.constraintlayout.widget.ConstraintLayout>